--- a/src/Components/Widg/Widg.css
+++ b/src/Components/Widg/Widg.css
@@ -7,6 +7,7 @@
   border: 1px solid lightgray;
   height: fit-content;
   padding-bottom: 10px;
+  width: 200px;
 }
 .header__widgets {
   display: flex;
